bloodc/src/parser/snapshots/bloodc__parser__tests__combo_impl_with_all_features.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected keyword `fn`, found type identifier", span: Span { start: 79, end: 83, start_line: 6, start_col: 11 }, labels: [], suggestions: [], source_file: None, source_content: None }]
